@@ -75,7 +75,7 @@ for i = 1:size(state.Population,1)
             % equality constraints, linear or nonlinear. If LB and UB
             % exist, PopInitRange should already have been set to match
             % them.
-            while any(c > options.TolCon) || lineq
+            while any(c > options.TolCon) || any(lineq)
                 state.Population(i,:) = options.PopInitRange(1,:) + ...
                     rand(1,size(options.PopInitRange,2)) .* ...
                     (options.PopInitRange(2,:) - ...
